--- a/apps/keys-portal/index.html
+++ b/apps/keys-portal/index.html
@@ -1,24 +1,25 @@
 <!doctype html>
-<html lang="en">
+<html lang="sv">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mimer-key-vault</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-
-    <meta property="og:title" content="mimer-key-vault" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <title>Mimer Nyckelhantering</title>
+    <meta name="description" content="Mimers applikation för hantering av fasta nycklar" />
+    <meta name="theme-color" content="#ffffff" />
   </head>
 
   <body>
     <div id="root"></div>
+    <script language="javascript">
+      window.__ENV = {
+        VITE_CORE_API_URL: '',
+        VITE_KEYCLOAK_URL: '',
+        VITE_KEYCLOAK_REALM: '',
+        VITE_KEYCLOAK_CLIENT_ID: '',
+        VITE_KEYCLOAK_REDIRECT_URI: ''
+      }
+    </script>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
