--- a/apps/property-tree/index.html
+++ b/apps/property-tree/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Property Tree Management System" />
     <meta name="theme-color" content="#ffffff" />
-    <title>Onecore</title>
+    <title>ONECore</title>
   </head>
 
   <body>
