--- a/apps/keys-portal/index.html
+++ b/apps/keys-portal/index.html
@@ -16,7 +16,8 @@
         VITE_KEYCLOAK_URL: '',
         VITE_KEYCLOAK_REALM: '',
         VITE_KEYCLOAK_CLIENT_ID: '',
-        VITE_KEYCLOAK_REDIRECT_URI: ''
+        VITE_KEYCLOAK_REDIRECT_URI: '',
+        VITE_PROPERTY_TREE_URL: ''
       }
     </script>
 
