--- a/apps/keys-portal/index.html
+++ b/apps/keys-portal/index.html
@@ -2,6 +2,11 @@
 <html lang="sv">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/components/assets/logos/simple/onecore_simple_black.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mimer Nyckelhantering</title>
     <meta name="description" content="Mimers applikation för hantering av fasta nycklar" />
